# pytq

./: .gitignore  CITATION.cff  LICENSE  README.md  index.html  pyproject.toml  quality_results.json
benchmarks/: bench_comparison.py  bench_distortion.py  bench_e2e.py  bench_memory.py  bench_quality.py  bench_speed.py  run_all.py
docs/superpowers/plans/: 2026-03-28-turboquant-implementation.md
docs/superpowers/specs/: 2026-03-28-release-readiness-design.md  2026-03-28-turboquant-design.md
examples/: demo.py
pytq/: __init__.py  codebook.py  kv_cache.py  outlier.py  quantize_mse.py  quantize_prod.py  rotation.py  utils.py
tests/: test_codebook.py  test_kv_cache.py  test_quantize.py  test_rotation.py
