[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytq"
version = "0.1.0"
description = "TurboQuant: Online Vector Quantization with Near-optimal Distortion Rate"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Anchit Gupta"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1",
    "numpy",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/anchitgupt/pytq"
Repository = "https://github.com/anchitgupt/pytq"
Paper = "https://arxiv.org/abs/2504.19874"

[project.optional-dependencies]
bench = [
    "transformers",
    "torchao",
    "datasets",
    "psutil",
    "matplotlib",
    "tqdm",
]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["pytq*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
